Buffer shadow bug #44240

Closed
opened 2015-04-02 20:44:22 +02:00 by Alexey · 7 comments

windows7 64
ASUS ATI Radeon HD6870

Blender Version
Broken: All
Worked: None

Short description of error
1.png
2.png
3.png
4.png
5.png

Exact steps for others to reproduce the errorBffer_shadow_bug.blend
Open this file, look on lamp settings - we will see switched on halo mode
select rendered shading mode, f21 to render, look on lamp preview - we will not see halo

windows7 64 ASUS ATI Radeon HD6870 Blender Version Broken: All Worked: None **Short description of error** ![1.png](https://archive.blender.org/developer/F157520/1.png) ![2.png](https://archive.blender.org/developer/F157522/2.png) ![3.png](https://archive.blender.org/developer/F157524/3.png) ![4.png](https://archive.blender.org/developer/F157526/4.png) ![5.png](https://archive.blender.org/developer/F157528/5.png) **Exact steps for others to reproduce the error**[Bffer_shadow_bug.blend](https://archive.blender.org/developer/F157531/Bffer_shadow_bug.blend) Open this file, look on lamp settings - we will see switched on halo mode select rendered shading mode, f21 to render, look on lamp preview - we will not see halo
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Inwader77

Added subscriber: @Inwader77

Added subscriber: @sindra1961

Added subscriber: @sindra1961

When Shadow buffer type of Lamp is set in Deep, is Shadow method that Halo is drawn in no case?

When Shadow buffer type of Lamp is set in Deep, is Shadow method that Halo is drawn in no case?
Bastien Montagne self-assigned this 2015-04-03 11:07:40 +02:00

This issue was referenced by 89530f1486

This issue was referenced by 89530f1486cecb3b1036d1b06964aee1ba68d3ac

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 89530f1486.

Closed by commit 89530f1486.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44240
No description provided.